# portfoilos

./: multitenant_prompts.md  vps_deployment_guide.md
portfoilo_tenant_server/: .env.example  .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  seed_db.py
portfoilo_tenant_server/apps/: __init__.py
portfoilo_tenant_server/apps/accounts/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
portfoilo_tenant_server/apps/accounts/migrations/: 0001_initial.py
portfoilo_tenant_server/apps/bookings/: __init__.py  admin.py  apps.py  signals.py  urls.py  views.py
portfoilo_tenant_server/apps/bookings/migrations/: 0001_initial.py
portfoilo_tenant_server/apps/bookings/models/: __init__.py  booking.py
portfoilo_tenant_server/apps/catalog/: __init__.py  admin.py  apps.py  serializers.py  urls.py  views.py
portfoilo_tenant_server/apps/catalog/migrations/: 0001_initial.py
portfoilo_tenant_server/apps/catalog/models/: __init__.py  category.py  gallery.py  review.py
portfoilo_tenant_server/apps/pages/: __init__.py  admin.py  apps.py  urls.py  views.py
portfoilo_tenant_server/apps/pages/migrations/: 0001_initial.py
portfoilo_tenant_server/apps/pages/models/: __init__.py  block.py  page.py  tab.py
portfoilo_tenant_server/apps/tenants/: __init__.py  admin.py  apps.py  managers.py  serializers.py  urls.py  views.py
portfoilo_tenant_server/config/: asgi.py  urls.py  wsgi.py
portfoilo_tenant_server/config/settings/: __init__.py  base.py  development.py  production.py
portfoilo_tenant_server/core/: models.py  pagination.py  permissions.py
(+61 files in other folders)
