[project]
name = "portfolio-tenant-server"
version = "1.0.0"
description = "Multi-tenant SaaS portfolio backend for event rental businesses"
requires-python = ">=3.12"

dependencies = [
    "django>=5.0",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "django-cors-headers>=4.4",
    "django-environ>=0.11",
    "django-filter>=24.0",
    "drf-spectacular>=0.27",
    "Pillow>=10.0",
    "psycopg2-binary>=2.9",
    "whitenoise>=6.7",
    "gunicorn>=22.0",
    "uvicorn[standard]>=0.30",
]

[tool.uv]
dev-dependencies = [
    "django-debug-toolbar>=4.4",
    "pytest-django>=4.8",
    "pytest>=8.0",
    "factory-boy>=3.3",
    "black>=24.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py", "*_test.py"]
